# clickhouse-admin/api/src/lib.rs
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at https://mozilla.org/MPL/2.0/.
 
-use dropshot::{HttpError, HttpResponseOk, RequestContext};
+use dropshot::{HttpError, HttpResponseCreated, HttpResponseOk, RequestContext, TypedBody};
 use schemars::JsonSchema;
 use serde::{Deserialize, Serialize};
 use std::net::SocketAddrV6;
@@ -11,7 +11,7 @@ use std::net::SocketAddrV6;
 pub trait ClickhouseAdminApi {
     type Context;
 
-    /// Retrieve the address the ClickHouse server or keeper node is listening on
+    /// Retrieve the address the ClickHouse server or keeper node is listening on.
     #[endpoint {
         method = GET,
         path = "/node/address",
@@ -19,10 +19,43 @@ pub trait ClickhouseAdminApi {
     async fn clickhouse_address(
         rqctx: RequestContext<Self::Context>,
     ) -> Result<HttpResponseOk<ClickhouseAddress>, HttpError>;
+
+    /// Generate a ClickHouse configuration file for a server node on a specified
+    /// directory.
+    #[endpoint {
+        method = POST,
+        // TODO: I'm not sure about this endpoint, could be better?
+        path = "/server-node/generate-config",
+    }]
+    async fn generate_server_config(
+        rqctx: RequestContext<Self::Context>,
+        body: TypedBody<ServerSettings>,
+    ) -> Result<HttpResponseCreated<ServerConfigGenerateResponse>, HttpError>;
 }
 
 #[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, JsonSchema)]
 #[serde(rename_all = "snake_case")]
 pub struct ClickhouseAddress {
     pub clickhouse_address: SocketAddrV6,
+}
+
+// TODO: Perhaps change this response type for something better
+// like an object with all the settings or something like that
+/// Success response for server node configuration file generation
+#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, JsonSchema)]
+#[serde(rename_all = "snake_case")]
+pub struct ServerConfigGenerateResponse {
+    pub success: bool,
+}
+
+impl ServerConfigGenerateResponse {
+    pub fn success() -> Self {
+        Self { success: true }
+    }
+}
+
+#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, JsonSchema)]
+#[serde(rename_all = "snake_case")]
+pub struct ServerSettings {
+    pub node_id: u64,
 }
